# package-dispatcher

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/package_dispatcher/: __init__.py  __main__.py  sorter.py
tests/: test_sorter.py
