[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "package-dispatcher"
version = "0.1.0"
description = "Package dispatch classification with tests and CLI."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ali" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
package-dispatch = "package_dispatcher.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
